# nicegraf-samples

./: .gitignore  .gitmodules  CMakeLists.txt
00-imgui/: imgui.cpp  main.cpp
01-full-screen-triangle/: .main.cpp.swp  full-screen-triangle.cpp  main.cpp
02-spec-consts/: main.cpp  spec-consts.cpp
03-hexagon/: hexagon.cpp  main.cpp
04-hexagon-indexed/: hexagon-indexed.cpp  main.cpp
05-uniform-buffers/: uniform-buffers.cpp
06-depth/: depth.cpp  main.cpp
07-simple-texture/: main.cpp  simple-texture.cpp
08-render-to-texture/: render-to-texture.cpp
09-texture-sampling/: texture-sampling.cpp
0a-instancing/: instancing.cpp
0b-shader-editor/: shader-editor.cpp
0c-cubemap/: cubemap.cpp
artifacts/shaders/: fullscreen-triangle.frag.glsl  fullscreen-triangle.frag.msl  fullscreen-triangle.vert.glsl  fullscreen-triangle.vert.msl  hexagon-animated.vert.glsl  hexagon-animated.vert.msl  hexagon.frag.glsl  hexagon.frag.msl  hexagon.vert.glsl  hexagon.vert.msl  imgui.frag.glsl  imgui.vert.glsl  simple-texture.frag.glsl  simple-texture.frag.msl  solid-color.frag.glsl  solid-color.frag.msl  spec-consts.frag.glsl  spec-consts.frag.msl  triangle.vert.glsl  triangle.vert.msl
artifacts/shaders/hlsl/: .model-view-projection.hlsl.un~  cubemap.hlsl  depth.hlsl  editor-preamble.hlsl  fullscreen_triangle.hlsl  hexagon.hlsl  imgui.hlsl  model-view-projection.hlsl  model-view-projection.hlsl~  sampling.hlsl  simple_texture.hlsl  spec_consts.hlsl  textured-cube.hlsl  triangle.hlsl
artifacts/textures/: LENA.DATA  LENA1.DATA  LENA2.DATA  LENA3.DATA  LENA4.DATA  LENA5.DATA  LENA6.DATA  LENA7.DATA  LENA8.DATA  LENA9.DATA  TILES1.DATA  TILES10.DATA  TILES2.DATA  TILES3.DATA  TILES4.DATA  TILES5.DATA  TILES6.DATA  TILES7.DATA  TILES8.DATA  TILES9.DATA
common/: apple_main.mm  common.cpp  common.h  get_glfw_contentview.h  get_glfw_contentview.mm  imgui_ngf_backend.cpp  imgui_ngf_backend.h  nicemath.h
vol-01/00-imgui/: imgui.cpp
vol-01/01-full-screen-triangle/: full-screen-triangle.cpp
vol-01/02-spec-consts/: spec-consts.cpp
vol-01/03-hexagon/: hexagon.cpp
vol-01/04-hexagon-indexed/: hexagon-indexed.cpp
vol-01/05-uniform-buffers/: uniform-buffers.cpp
vol-01/06-depth/: depth.cpp
vol-01/07-simple-texture/: simple-texture.cpp
vol-01/08-render-to-texture/: render-to-texture.cpp
vol-01/09-texture-sampling/: texture-sampling.cpp
vol-01/0a-instancing/: instancing.cpp
vol-01/0b-shader-editor/: shader-editor.cpp
vol-01/0c-cubemap/: cubemap.cpp
vol-02/00-model-view-projection/: model-view-projection.cpp
